--- a/DFC.App.ContactUs/Views/WhyContactUs/EditorTemplates/Category.cshtml
+++ b/DFC.App.ContactUs/Views/WhyContactUs/EditorTemplates/Category.cshtml
@@ -23,9 +23,10 @@
             if (category != Category.None && category != Category.Callback)
             {
                 var radioId = category == Category.AdviceGuidance ? nameof(WhyContactUsBodyViewModel.SelectedCategory) : $"{category}-option";
+                var showChecked = Model == category ? "checked=checked" : string.Empty;
 
                 <div class="govuk-radios__item">
-                    <input class="govuk-radios__input" name="@nameof(WhyContactUsBodyViewModel.SelectedCategory)" id="@radioId" type="radio" value="@category" data-val="true" data-val-required="@WhyContactUsBodyViewModel.SelectedCategoryValidationError">
+                    <input class="govuk-radios__input" name="@nameof(WhyContactUsBodyViewModel.SelectedCategory)" id="@radioId" type="radio" @showChecked value="@category" data-val="true" data-val-required="@WhyContactUsBodyViewModel.SelectedCategoryValidationError">
                     <label class="govuk-label govuk-radios__label" for="@radioId">@category.GetDescription()</label>
                 </div>
             }
