Updated Home screen wordings

--- a/DFC.App.ContactUs/Views/Home/HomeForm.cshtml
+++ b/DFC.App.ContactUs/Views/Home/HomeForm.cshtml
@@ -8,8 +8,10 @@
             <h1 class="govuk-fieldset__heading">Contact us</h1>
         </legend>
         <p>
-            Call @Model.ServiceOpenDetailModel.PhoneNumber to speak to an adviser. Lines are open from  @Model.ServiceOpenDetailModel.OpenTimesString,  @Model.ServiceOpenDetailModel.OpenDays. Calls are free from landlines and most mobile numbers.
-            Find out more about <a href="https://www.gov.uk/call-charges">call charges and freephone numbers</a>.
+            Call @Model.ServiceOpenDetailModel.PhoneNumber to speak to an adviser. Lines are open from  @Model.ServiceOpenDetailModel.OpenTimesString,  @Model.ServiceOpenDetailModel.OpenDays.
+        </p>
+        <p>
+            Calls are free from landlines and most mobile numbers. Please check for <a href="https://www.gov.uk/call-charges">possible call charges and freephone numbers.</a>
         </p>
         <p class="govuk-body">
             If you do not want to call us, you can also:
