Renamed Why Contact Us controller, views, tests etc to How Can We Help

--- a/DFC.App.ContactUs/Views/HowCanWeHelp/HowCanWeHelpForm.cshtml
+++ b/DFC.App.ContactUs/Views/HowCanWeHelp/HowCanWeHelpForm.cshtml
@@ -1,21 +1,21 @@
-﻿@model WhyContactUsBodyViewModel
+﻿@model HowCanWeHelpBodyViewModel
 
 <div class="govuk-form-group">
     <partial name="_AppErrorSummary" />
 
     <fieldset class="govuk-fieldset" aria-describedby="form-hint">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-            <h1 class="govuk-fieldset__heading">Why do you want to contact us</h1>
+            <h1 class="govuk-fieldset__heading">How can we help?</h1>
         </legend>
         <p class="govuk-body">
-            Please select an option from the list below. This helps us to send your enquiry to the right person.
+            Please select an option to help us send your email to the right person.
         </p>
 
         @Html.EditorFor(model => model.SelectedCategory)
         @Html.EditorFor(model => model.MoreDetail)
 
     </fieldset>
-    <button id="WhyContactUsNextButton" class="govuk-button" data-module="govuk-button">
+    <button id="HowCanWeHelpNextButton" class="govuk-button" data-module="govuk-button">
         Next
     </button>
 </div>
