--- a/DFC.App.ContactUs/Views/HowCanWeHelp/HowCanWeHelpForm.cshtml
+++ b/DFC.App.ContactUs/Views/HowCanWeHelp/HowCanWeHelpForm.cshtml
@@ -14,6 +14,7 @@
         @Html.EditorFor(model => model.SelectedCategory)
         @Html.EditorFor(model => model.MoreDetail)
 
+        @Html.HiddenFor(model => model.IsCallback)
     </fieldset>
     <button id="HowCanWeHelpNextButton" class="govuk-button" data-module="govuk-button">
         Next
