Replaced word as requested in the bug

--- a/DFC.App.ContactUs/Views/EnterYourDetails/EnterYourDetailsForm.cshtml
+++ b/DFC.App.ContactUs/Views/EnterYourDetails/EnterYourDetailsForm.cshtml
@@ -14,7 +14,7 @@
                 Complete this form to book a phone call with one of our advisers.
             </p>
             <p class="govuk-body">
-                Our advisers will use your details to email you with relevant information, like using your postcode to find courses available near you.
+                Our advisers will use your details to call you with relevant information, like using your postcode to find courses available near you.
             </p>
             <p class="govuk-body">
                 To book a phone call you must:
