--- a/DFC.App.ContactUs/Views/Pages/Body.cshtml
+++ b/DFC.App.ContactUs/Views/Pages/Body.cshtml
@@ -1,9 +1,9 @@
 ﻿@model BodyViewModel
 
 
-@if (Model.Content != null)
+@if (Model.Body != null)
 {
     <div class="govuk-width-container">
-        @Html.Raw(Model.Content)
+        @Html.Raw(Model.Body)
     </div>
 }
