Updated routes to document view to fix oversight

--- a/DFC.App.ContactUs/Views/Pages/Index.cshtml
+++ b/DFC.App.ContactUs/Views/Pages/Index.cshtml
@@ -22,7 +22,7 @@
                     else
                     {
                         <li>
-                            <a href="/@Model.LocalPath/@document.Id">@document.Title</a>
+                            <a href="/@Model.LocalPath/@document.Id/document">@document.Title</a>
                         </li>
                     }
                 }
