Removed obsolete class item

--- a/DFC.App.ContactUs/Views/EnterYourDetails/EditorTemplates/CallbackTimeOption.cshtml
+++ b/DFC.App.ContactUs/Views/EnterYourDetails/EditorTemplates/CallbackTimeOption.cshtml
@@ -31,7 +31,7 @@
                 var showChecked = Model == option ? "checked=checked" : string.Empty;
 
                 <div class="govuk-radios__item">
-                    <input class="govuk-radios__input dfc-app-contact-us-CallbackTimeOption" 
+                    <input class="govuk-radios__input" 
                            name="@nameof(EnterYourDetailsBodyViewModel.CallbackTimeOptionSelected)" 
                            id="@radioId" 
                            type="radio"
