--- a/DFC.App.ContactUs/Views/Home/HomeForm.cshtml
+++ b/DFC.App.ContactUs/Views/Home/HomeForm.cshtml
@@ -8,7 +8,7 @@
             <h1 class="govuk-fieldset__heading">Contact us</h1>
         </legend>
         <p>
-            Call @Model.ServiceOpenDetailModel.PhoneNumber to speak to an adviser. Lines are open from  @Model.ServiceOpenDetailModel.OpenTimesString,  @Model.ServiceOpenDetailModel.OpenDays.
+            Call @Model.PhoneNumber to speak to an adviser. @Model.LinesOpenString
         </p>
         <p>
             Calls are free from landlines and most mobile numbers. Please check for <a class="govuk-link" href="https://www.gov.uk/call-charges">possible call charges and freephone numbers</a>.
