--- a/DFC.App.ContactUs/Views/Home/HomeForm.cshtml
+++ b/DFC.App.ContactUs/Views/Home/HomeForm.cshtml
@@ -8,8 +8,18 @@
             <h1 class="govuk-fieldset__heading">Contact us</h1>
         </legend>
         <p>
-            Call @Model.PhoneNumber to speak to an adviser. @Model.LinesOpenString
+            Call @Model.PhoneNumber to speak to an adviser. Lines are available from:
         </p>
+        <blockquote>
+            <ul class="govuk-list govuk-list--bullet">
+                <li>
+                    8am-8pm Monday-Friday
+                </li>
+                <li>
+                    10am-5pm Saturday
+                </li>
+            </ul>
+        </blockquote>
         <p>
             Calls are free from landlines and most mobile numbers. Please check for <a class="govuk-link" href="https://www.gov.uk/call-charges">possible call charges and freephone numbers</a>.
         </p>
