--- a/DFC.App.ContactUs/Views/Pages/Index.cshtml
+++ b/DFC.App.ContactUs/Views/Pages/Index.cshtml
@@ -13,9 +13,18 @@
             <ul>
                 @foreach (var document in Model.Documents)
                 {
-                    <li>
-                        <a href="/@Model.LocalPath/@document.CanonicalName">@document.CanonicalName</a>
-                    </li>
+                    if (document.Id == null)
+                    {
+                        <li>
+                            <a href="/@Model.LocalPath/@document.Title">@document.Title</a>
+                        </li>
+                    }
+                    else
+                    {
+                        <li>
+                            <a href="/@Model.LocalPath/@document.Id/document">@document.Title</a>
+                        </li>
+                    }
                 }
             </ul>
         }
