Applied styling as requested in ticket

--- a/DFC.App.ContactUs/Views/Home/HomeForm.cshtml
+++ b/DFC.App.ContactUs/Views/Home/HomeForm.cshtml
@@ -13,10 +13,10 @@
         <blockquote>
             <ul class="govuk-list govuk-list--bullet">
                 <li>
-                    8am-8pm Monday-Friday
+                    8am - 8pm Monday - Friday
                 </li>
                 <li>
-                    10am-5pm Saturday
+                    10am - 5pm Saturday
                 </li>
             </ul>
         </blockquote>
