--- a/DFC.App.ContactUs/Views/Chat/ChatBody.cshtml
+++ b/DFC.App.ContactUs/Views/Chat/ChatBody.cshtml
@@ -15,9 +15,9 @@
 else
 {
     <div>
-        <h2>Sorry, the webchat is not available</h2>
-        <p>Sorry, our webchat is currently closed.<p>
-        <p>If you would like to speak to an adviser, you can:</p>
+        <h2>Sorry, the webchat service is currently not available</h2>
+        <p>We are improving our webchat service at the moment, we apologise for any inconvenience caused.</p>
+        <p>In the meantime, if you would like to speak to an adviser, you can:</p>
         <ul class="govuk-list govuk-list--bullet">
             <li>call @Model.PhoneNumber to speak to an adviser - lines are open 8am to 8pm Monday to Friday, and 10am to 5pm Saturday, calls are <a class="govuk-link" href="https://www.gov.uk/call-charges">free from landlines and most mobile numbers</a></li>
             <li><a class="govuk-link" href="@Model.HowCanWeHelpLink">send us an online message</a> and we will respond to you as soon as possible</li>
