--- a/DFC.App.ContactUs/Views/Shared/_LocalJs.cshtml
+++ b/DFC.App.ContactUs/Views/Shared/_LocalJs.cshtml
@@ -1,11 +1,12 @@
 ﻿@{
     var cdnLocation = "https://dev-cdn.nationalcareersservice.org.uk/nationalcareers_toolkit";
+    var queryStringVersion = @DateTime.Today.ToString("yyyy-mm-dd");
 }
 
-<script src="@cdnLocation/js/jquerybundle.min.js"></script>
-<script src="@cdnLocation/js/all.min.js"></script>
-<script src="@cdnLocation/js/dfcdigital.min.js"></script>
+<script src="@cdnLocation/js/jquerybundle.min.js?@queryStringVersion"></script>
+<script src="@cdnLocation/js/all.min.js?@queryStringVersion"></script>
+<script src="@cdnLocation/js/dfcdigital.min.js?@queryStringVersion"></script>
 
 <script>window.GOVUKFrontend.initAll()</script>
 
-<script src="@cdnLocation/js/dfc-app-contactus.min.js"></script>
+<script src="@cdnLocation/js/dfc-app-contactus.min.js?@queryStringVersion"></script>
