Renamed HtmlHead to Head to comply with CUI endpoint naming standards

--- a/DFC.App.ContactUs/Views/EnterYourDetails/EnterYourDetailsView.cshtml
+++ b/DFC.App.ContactUs/Views/EnterYourDetails/EnterYourDetailsView.cshtml
@@ -2,9 +2,9 @@
 @{
     Layout = "_LocalLayout";
 
-    if (!string.IsNullOrWhiteSpace(Model.HtmlHead?.Title))
+    if (!string.IsNullOrWhiteSpace(Model.Head?.Title))
     {
-        ViewData["Title"] = Model.HtmlHead.Title;
+        ViewData["Title"] = Model.Head.Title;
     }
 }
 
