--- a/DFC.App.ContactUs/Views/Home/HomeView.cshtml
+++ b/DFC.App.ContactUs/Views/Home/HomeView.cshtml
@@ -3,9 +3,9 @@
 @{
     Layout = "_LocalLayout";
 
-    if (!string.IsNullOrWhiteSpace(Model.HtmlHead?.Title))
+    if (!string.IsNullOrWhiteSpace(Model.Head?.Title))
     {
-        ViewData["Title"] = Model.HtmlHead.Title;
+        ViewData["Title"] = Model.Head.Title;
     }
 }
 
