displays the times of day in bold

--- a/DFC.App.ContactUs/Views/Home/HomeForm.cshtml
+++ b/DFC.App.ContactUs/Views/Home/HomeForm.cshtml
@@ -13,11 +13,11 @@
         <blockquote>
             <ul class="govuk-list govuk-list--bullet">
                 <li>
-                    8am - 8pm Monday - Friday
+                    <span class="govuk-body govuk-!-font-weight-bold">8am - 8pm</span> Monday - Friday
                 </li>
                 <li>
-                    10am - 5pm Saturday
-                </li>
+                    <span class="govuk-body govuk-!-font-weight-bold">10am - 5pm</span> Saturday and bank holidays
+</li>
             </ul>
         </blockquote>
         <p>
