--- a/DFC.App.ContactUs/Views/Home/HomeForm.cshtml
+++ b/DFC.App.ContactUs/Views/Home/HomeForm.cshtml
@@ -16,8 +16,8 @@
                     <span class="govuk-body govuk-!-font-weight-bold">8am - 8pm</span> Monday - Friday
                 </li>
                 <li>
-                    <span class="govuk-body govuk-!-font-weight-bold">10am - 5pm</span> Saturday and bank holidays
-</li>
+                    <span class="govuk-body govuk-!-font-weight-bold">10am - 5pm</span> Saturday and <a class="govuk-link" href="https://www.gov.uk/bank-holidays">bank holidays</a>
+                </li>
             </ul>
         </blockquote>
         <p>
