Updated the text to be inline with requirements

--- a/DFC.App.ContactUs/Views/Home/HomeForm.cshtml
+++ b/DFC.App.ContactUs/Views/Home/HomeForm.cshtml
@@ -8,7 +8,10 @@
             <h1 class="govuk-fieldset__heading">Contact us</h1>
         </legend>
         <p>
-            Call @Model.PhoneNumber to speak to an adviser. Lines are available from:
+            Call @Model.PhoneNumber to speak to an adviser.
+        </p>
+        <p>
+            We're open:
         </p>
         <blockquote>
             <ul class="govuk-list govuk-list--bullet">
