--- a/DFC.App.ContactUs/Views/Home/HomeForm.cshtml
+++ b/DFC.App.ContactUs/Views/Home/HomeForm.cshtml
@@ -8,19 +8,28 @@
             <h1 class="govuk-fieldset__heading">Contact us</h1>
         </legend>
         <p>
-            Call @Model.PhoneNumber to speak to an adviser. Lines are available from:
+            Call @Model.PhoneNumber to speak to an adviser.
+        </p>
+        <p>
+            We're open:
         </p>
         <blockquote>
             <ul class="govuk-list govuk-list--bullet">
                 <li>
-                    8am - 8pm Monday - Friday
+                    <span class="govuk-body govuk-!-font-weight-bold">8am - 8pm</span> Monday - Friday
                 </li>
                 <li>
-                    10am - 5pm Saturday
+                    <span class="govuk-body govuk-!-font-weight-bold">10am - 5pm</span> Saturday and <a class="govuk-link" href="https://www.gov.uk/bank-holidays">bank holidays</a>
                 </li>
             </ul>
         </blockquote>
-        <p>
+        <p class="govuk-body">
+            We're closed Sunday, Christmas Day and New Year's Day.
+        </p>
+        <p class="govuk-body">
+            We're also closed on 2 and 3 June 2022 for the spring bank holiday and the Platinum Jubilee bank holiday.
+        </p>
+        <p class="govuk-body">
             Calls are free from landlines and most mobile numbers. Please check for <a class="govuk-link" href="https://www.gov.uk/call-charges">possible call charges and freephone numbers</a>.
         </p>
         <p class="govuk-body">
