NCSLT-959 Update 'speak to an adviser' message

--- a/DFC.App.ContactUs/Views/Home/HomeForm.cshtml
+++ b/DFC.App.ContactUs/Views/Home/HomeForm.cshtml
@@ -16,10 +16,10 @@
         <blockquote>
             <ul class="govuk-list govuk-list--bullet">
                 <li>
-                    <span class="govuk-body govuk-!-font-weight-bold">8am - 8pm</span> Monday - Friday
+                    <span class="govuk-body govuk-!-font-weight-bold">8am to 8pm</span> Monday to Friday
                 </li>
                 <li>
-                    <span class="govuk-body govuk-!-font-weight-bold">10am - 5pm</span> Saturday and <a class="govuk-link" href="https://www.gov.uk/bank-holidays">bank holidays</a>
+                    <span class="govuk-body govuk-!-font-weight-bold">10am to 5pm</span> Saturday and <a class="govuk-link" href="https://www.gov.uk/bank-holidays">bank holidays</a>
                 </li>
             </ul>
         </blockquote>
