--- a/DFC.App.ContactUs/Views/Home/HomeForm.cshtml
+++ b/DFC.App.ContactUs/Views/Home/HomeForm.cshtml
@@ -27,6 +27,9 @@
             We're closed Sunday, Christmas Day and New Year's Day.
         </p>
         <p class="govuk-body">
+            As a mark of respect, we will be closed on Monday 19 September for the State Funeral of Queen Elizabeth II.
+        </p>
+        <p class="govuk-body">
             Calls are free from landlines and most mobile numbers. Please check for <a class="govuk-link" href="https://www.gov.uk/call-charges">possible call charges and freephone numbers</a>.
         </p>
         <p class="govuk-body">
