Temporary changes for the holiday period.

--- a/DFC.App.ContactUs/Views/Home/HomeForm.cshtml
+++ b/DFC.App.ContactUs/Views/Home/HomeForm.cshtml
@@ -11,7 +11,10 @@
             Call @Model.PhoneNumber to speak to an adviser.
         </p>
         <p>
-            We're open:
+            Due to the Christmas holidays, we're closed on Christmas Day, Boxing Day, Tuesday 27 December, New Year's Day and Monday 2 January.
+        </p>
+        <p>
+            Our usual opening hours are:
         </p>
         <blockquote>
             <ul class="govuk-list govuk-list--bullet">
@@ -19,13 +22,13 @@
                     <span class="govuk-body govuk-!-font-weight-bold">8am to 8pm</span> Monday to Friday
                 </li>
                 <li>
-                    <span class="govuk-body govuk-!-font-weight-bold">10am to 5pm</span> Saturday and <a class="govuk-link" href="https://www.gov.uk/bank-holidays">bank holidays</a>
+                    <span class="govuk-body govuk-!-font-weight-bold">10am to 5pm</span> Saturdays
+                </li>
+                <li>
+                    <span class="govuk-body govuk-!-font-weight-bold">closed</span> Sundays
                 </li>
             </ul>
         </blockquote>
-        <p class="govuk-body">
-            We're closed Sunday, Christmas Day and New Year's Day.
-        </p>
         <p class="govuk-body">
             Calls are free from landlines and most mobile numbers. Please check for <a class="govuk-link" href="https://www.gov.uk/call-charges">possible call charges and freephone numbers</a>.
         </p>
