--- a/DFC.App.ContactUs/Views/Home/HomeForm.cshtml
+++ b/DFC.App.ContactUs/Views/Home/HomeForm.cshtml
@@ -21,10 +21,13 @@
                 <li>
                     <span class="govuk-body govuk-!-font-weight-bold">10am to 5pm</span> Saturday and <a class="govuk-link" href="https://www.gov.uk/bank-holidays">bank holidays</a>
                 </li>
+                <li>
+                    <span class="govuk-body govuk-!-font-weight-bold">closed</span> Sundays, Christmas Day and New Year's Day
+                </li>
             </ul>
         </blockquote>
         <p class="govuk-body">
-            We're closed Sunday, Christmas Day and New Year's Day.
+            We’re also closed on Saturday 6 May 2023 for the coronation of King Charles III.
         </p>
         <p class="govuk-body">
             Calls are free from landlines and most mobile numbers. Please check for <a class="govuk-link" href="https://www.gov.uk/call-charges">possible call charges and freephone numbers</a>.
