Forgot to add 'Our opening hours are:'

--- a/DFC.App.ContactUs/Views/Home/HomeForm.cshtml
+++ b/DFC.App.ContactUs/Views/Home/HomeForm.cshtml
@@ -11,7 +11,7 @@
             Call @Model.PhoneNumber to speak to an adviser.
         </p>
         <p>
-            We're open:
+            Our opening hours are:
         </p>
         <blockquote>
             <ul class="govuk-list govuk-list--bullet">
