corrects the apostrophe

--- a/DFC.App.ContactUs/Views/Home/HomeForm.cshtml
+++ b/DFC.App.ContactUs/Views/Home/HomeForm.cshtml
@@ -27,7 +27,7 @@
             </ul>
         </blockquote>
         <p class="govuk-body">
-            We’re also closed on Saturday 6 May 2023 for the coronation of King Charles III.
+            We're also closed on Saturday 6 May 2023 for the coronation of King Charles III.
         </p>
         <p class="govuk-body">
             Calls are free from landlines and most mobile numbers. Please check for <a class="govuk-link" href="https://www.gov.uk/call-charges">possible call charges and freephone numbers</a>.
