updated primary button

--- a/DFC.App.ContactUs/Views/EnterYourDetails/EnterYourDetailsForm.cshtml
+++ b/DFC.App.ContactUs/Views/EnterYourDetails/EnterYourDetailsForm.cshtml
@@ -67,7 +67,7 @@
 
     <br />
 
-    <button id="EnterYourDetailsSendButton" class="govuk-button" data-module="govuk-button">
+    <button id="EnterYourDetailsSendButton" class="govuk-button ncs-button__primary" data-module="govuk-button">
         Send
     </button>
 </div>
