--- a/DFC.App.ContactUs/Views/HowCanWeHelp/HowCanWeHelpForm.cshtml
+++ b/DFC.App.ContactUs/Views/HowCanWeHelp/HowCanWeHelpForm.cshtml
@@ -16,7 +16,7 @@
 
         @Html.HiddenFor(model => model.IsCallback)
     </fieldset>
-    <button id="HowCanWeHelpNextButton" class="govuk-button" data-module="govuk-button">
+    <button id="HowCanWeHelpNextButton" class="govuk-button ncs-button__primary" data-module="govuk-button">
         Next
     </button>
 </div>
