--- a/DFC.App.ContactUs/Views/Home/HomeForm.cshtml
+++ b/DFC.App.ContactUs/Views/Home/HomeForm.cshtml
@@ -37,7 +37,7 @@
 
     </fieldset>
     <br />
-    <button id="HomeContinueButton" class="govuk-button" data-module="govuk-button">
+    <button id="HomeContinueButton" class="govuk-button ncs-button__primary" data-module="govuk-button">
         Continue
         <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" focusable="false">
             <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
