--- a/DFC.App.ContactUs/Views/Home/HomeForm.cshtml
+++ b/DFC.App.ContactUs/Views/Home/HomeForm.cshtml
@@ -4,31 +4,12 @@
     <partial name="_AppErrorSummary" />
 
     <fieldset class="govuk-fieldset" aria-describedby="form-hint">
-        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-            <h1 class="govuk-fieldset__heading">Contact us</h1>
-        </legend>
-        <p>
-            Call @Model.PhoneNumber to speak to an adviser.
-        </p>
-        <p>
-            We're open:
-        </p>
-        <blockquote>
-            <ul class="govuk-list govuk-list--bullet">
-                <li>
-                    <span class="govuk-body govuk-!-font-weight-bold">8am to 8pm</span> Monday to Friday
-                </li>
-                <li>
-                    <span class="govuk-body govuk-!-font-weight-bold">10am to 5pm</span> Saturday and <a class="govuk-link" href="https://www.gov.uk/bank-holidays">bank holidays</a>
-                </li>
-            </ul>
-        </blockquote>
-        <p class="govuk-body">
-            We're closed Sunday, Christmas Day and New Year's Day.
-        </p>
-        <p class="govuk-body">
-            Calls are free from landlines and most mobile numbers. Please check for <a class="govuk-link" href="https://www.gov.uk/call-charges">possible call charges and freephone numbers</a>.
-        </p>
+        @if (Model.ContactUs != null)
+        {
+            <div class="app-related-items">
+                @Html.Raw(Model.ContactUs)
+            </div>
+        }
         <p class="govuk-body">
             If you do not want to call us, you can also:
         </p>
